# clintochat

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: main.yml
env/: fastapi.env
kubernetes/: deployement.yaml  service.yaml
src/apps/: routers.py
src/apps/base/: service_base.py
src/apps/websockets/: service.py
src/config/: settings.py
