[tool.poetry]
name = "clintochat"
version = "0.1.0"
description = ""
authors = ["sakthiRatnam <sakthiratnam050@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
fastapi = "^0.68.1"
websockets = "^10.0"
aiofiles = "0.7.0"
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
uvloop = "^0.16.0"
pydantic = "^1.8.2"
emails = "^0.6"
python-multipart = "^0.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
